Criei pacjkage rest e fiz alterações no Course, UserDTO e StudentDTO para poder mostrar a lista de estudantes no index. Agora vou fazer para os outros users todos.

--- a/MasterManager-war/nbproject/project.properties
+++ b/MasterManager-war/nbproject/project.properties
@@ -77,6 +77,7 @@ platform.active=default_platform
 project.MasterManager-ejb=../MasterManager-ejb
 reference.MasterManager-ejb.dist=${project.MasterManager-ejb}/dist/MasterManager-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
