--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -9,6 +9,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/${jar.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
+file.reference.commons-fileupload-1.3.3.jar=commons-fileupload-1.3.3.jar
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -37,4 +38,6 @@ project.MasterManager-war=MasterManager-war
 reference.MasterManager-ejb.dist-ear=${project.MasterManager-ejb}/dist/MasterManager-ejb.jar
 reference.MasterManager-war.dist-ear=${project.MasterManager-war}/dist/MasterManager-war.war
 resource.dir=setup
+run.classpath=\
+    ${file.reference.commons-fileupload-1.3.3.jar}
 source.root=.
