--- a/MasterManager-war/nbproject/project.properties
+++ b/MasterManager-war/nbproject/project.properties
@@ -47,7 +47,9 @@ jar.compress=false
 javac.classpath=\
     ${reference.MasterManager-ejb.dist}:\
     ${file.reference.primefaces-6.1.jar}:\
-    ${file.reference.commons-fileupload-1.3.3.jar}
+    ${file.reference.commons-fileupload-1.3.3.jar}:\
+    ${libs.restlib.classpath}:\
+    ${libs.restapi.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
